--- a/packages/config/package.json
+++ b/packages/config/package.json
@@ -31,7 +31,5 @@
 		"vite-plugin-solid": "^2.10.2",
 		"vite-plugin-svgr": "^3.3.0"
 	},
-	"dependencies": {
-		"million": "^2.6.4"
-	}
+	"dependencies": {}
 }
